[gd_scene load_steps=2 format=2]

[ext_resource path="res://Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.43555
margin_top = -0.840881
margin_right = 1.43555
margin_bottom = -0.840881
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connect" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -227.5
margin_top = -102.0
margin_right = 227.5
margin_bottom = 102.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonJoin" type="Button" parent="Connect"]
anchor_left = 0.0535956
anchor_top = -1.30922
anchor_right = 0.0535956
anchor_bottom = -1.30922
margin_left = 297.59
margin_top = 331.694
margin_right = 405.59
margin_bottom = 369.694
text = "Join"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="labelIPPort" type="Label" parent="Connect/buttonJoin"]
margin_left = -297.59
margin_top = 7.30646
margin_right = -249.59
margin_bottom = 31.3065
text = "IP/Port:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="inputPort" type="LineEdit" parent="Connect/buttonJoin"]
margin_left = -80.0
margin_top = 7.0
margin_right = -22.0
margin_bottom = 31.0
text = "4242"
placeholder_text = "Port"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="inputIP" type="LineEdit" parent="Connect/buttonJoin"]
margin_left = -241.41
margin_top = 6.69354
margin_right = -81.4099
margin_bottom = 30.6935
text = "127.0.0.1"
placeholder_text = "IP"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="buttonHost" type="Button" parent="Connect"]
anchor_left = 0.0535956
anchor_top = -1.30922
anchor_right = 0.0535956
anchor_bottom = -1.30922
margin_left = 297.59
margin_top = 382.797
margin_right = 405.59
margin_bottom = 420.797
text = "Host"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="labelPort" type="Label" parent="Connect/buttonHost"]
margin_left = -297.59
margin_top = 7.203
margin_right = -255.59
margin_bottom = 31.203
text = "Port:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="inputPort" type="LineEdit" parent="Connect/buttonHost"]
margin_left = -80.0
margin_top = 7.0
margin_right = -22.0
margin_bottom = 31.0
text = "4242"
placeholder_text = "Port"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="inputName" type="LineEdit" parent="Connect"]
anchor_left = 0.0535956
anchor_top = -1.30922
anchor_right = 0.0535956
anchor_bottom = -1.30922
margin_left = 56.1801
margin_top = 300.272
margin_right = 216.18
margin_bottom = 324.272
text = "GordoPutovich"
placeholder_text = "Name"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="labelName" type="Label" parent="Connect"]
anchor_left = 0.0535956
anchor_top = -1.30922
anchor_right = 0.0535956
anchor_bottom = -1.30922
margin_top = 300.0
margin_right = 42.0
margin_bottom = 324.0
text = "Name:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="labelError" type="Label" parent="Connect"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -42.0

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_right = 84.0
margin_bottom = 58.0

[node name="Players" type="Panel" parent="."]
visible = false
margin_left = 356.571
margin_top = 68.6326
margin_right = 680.571
margin_bottom = 495.633
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Players"]
anchor_left = 0.063911
anchor_top = 0.012043
anchor_right = 0.940454
anchor_bottom = 0.143191
margin_left = -20.7072
margin_top = -5.14236
margin_right = 19.2928
margin_bottom = 8.85764
text = "Waiting for players to join..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="List" type="ItemList" parent="Players"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -113.5
margin_top = -143.5
margin_right = 113.5
margin_bottom = 143.5

[node name="buttonStart" type="Button" parent="Players"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -58.5
margin_top = -57.0308
margin_right = 58.5
margin_bottom = -14.0308
text = "sTART wn"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Connect/buttonJoin" to="." method="_on_buttonJoin_pressed"]
[connection signal="pressed" from="Connect/buttonHost" to="." method="_on_buttonHost_pressed"]
